--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "gpl-3.0",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "prompt-sync": "^4.2.0",
     "puppeteer": "^18.2.1",
     "request-promise": "^4.2.6"
   }
